--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -74,7 +74,7 @@
   padding-left: 1.5rem;
   color: hsl(0, 0%, 41%);
 }
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 420px){
   .container {
     height: 100vh;
   }
