--- a/src/components/Creations.module.css
+++ b/src/components/Creations.module.css
@@ -64,7 +64,7 @@
   display: none;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 420px){
   .CreationTab {
     flex-direction: column;
   }
