--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -77,7 +77,7 @@
 .menu {
   display: none;
 }
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 420px) {
   .overlay {
     position: relative;
     background-image: url("./images/mobile/image-hero.jpg");
