--- a/src/components/SubSection.module.css
+++ b/src/components/SubSection.module.css
@@ -45,7 +45,7 @@
   padding-top: 1.5rem;
   font-size: 1rem;
 }
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 420px) {
   .container {
     flex-direction: column;
     height: 80vh;
