--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -77,24 +77,21 @@
 .menu {
   display: none;
 }
-@media screen and (min-width: 375px) and (max-width: 420px) {
+@media screen and (max-width: 480px) {
   .overlay {
     position: relative;
     background-image: url("./images/mobile/image-hero.jpg");
   }
-  .overlay img {
-    max-width: 100vw;
-  }
   .column {
-    width: 340px;
+    width: 80%;
     height: 190px;
     font-size: 2.5rem;
-    margin: 11rem 1rem;
+    margin: 11rem 2.5rem;
     padding-top: 1.5rem;
     padding-left: 1.2rem;
   }
   .logo {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     z-index: 11;
   }
   .navbar {
@@ -115,24 +112,23 @@
   .mobileNavlist {
     display: block;
     color: white;
-    padding-top: 7rem;
+    padding-top: 9rem;
     width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.9);
-    opacity: 0.8;
+    background-color: black;
     z-index: 10;
 
     /* transition: transform 0.3s linear; */
   }
 
   .mobileNavlist li {
-    display: inline-block;
+    display: flex;
     padding-top: 1rem;
     font-size: 1.2rem;
-    margin-left: 10rem;
+    margin-left: 2rem;
     padding-bottom: 1rem;
     font-family: "Alata", sans-serif;
   }
@@ -140,6 +136,6 @@
     left: 0;
   }
   .underline:hover::before {
-    width: 100%;
+    width: 27%;
   }
 }
